fix: credit card select flex wrap

--- a/src/app/components/credit-card-select/credit-card-select.component.scss
+++ b/src/app/components/credit-card-select/credit-card-select.component.scss
@@ -1,7 +1,7 @@
 
 .creditCard{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     .currency{
         h2{
